--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk@v3
         with:
-          github_user_name: yashraj24007
+          github_user_name: Yash-Raj-2403
           outputs: |
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             
